# cli-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake  Dependencies.cmake
include/core/: 2025-01.hpp  README.md  util.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
tests/: CMakeLists.txt  test_2025-01.cpp
