# Core library (placeholder for future functionality)
#
# When you add functionality, uncomment and modify this file:
#
# add_library(core
#     example.cpp
#     # Add more source files here
# )
#
# target_include_directories(core
#     PUBLIC
#         ${CMAKE_SOURCE_DIR}/include
# )
#
# target_link_libraries(core
#     PUBLIC
#         CLI11::CLI11
#     PRIVATE
#         # Add other dependencies here
# )

# For now, this file serves as a placeholder and reference
message(STATUS "Core library CMakeLists.txt is ready for future use")
